force-app/main/default/objects/ssot__AssessmentIndicatorValue__dlm/fields/ssot__AssessmentIndicatorDefinedValueId__c.field-meta.xml
<CustomField>
    <fullName>ssot__AssessmentIndicatorDefinedValueId__c</fullName>
    <label>Assessment Indicator Defined Value</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AssessmentIndicatorDefinedValueId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>