force-app/main/default/objects/ssot__AssessmentIndicatorValue__dlm/fields/ssot__rel_1739512787220_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1739512787220_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AssessmentIndicatorValue_SourceConte_rel</label>
    <referenceTo>ssot__InspectionAssessmentIndicator__dlm</referenceTo>
    <relationshipLabel>AssessmentIndicatorValue_SourceConte_rel</relationshipLabel>
    <relationshipName>rel_1739512787220_end</relationshipName>
    <type>Lookup</type>
</CustomField>