force-app/main/default/objects/ssot__AssessmentIndicatorValue__dlm/fields/ssot__SourceContextId__c.field-meta.xml
<CustomField>
    <fullName>ssot__SourceContextId__c</fullName>
    <label>Source Context</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>SourceContextId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>